--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "cssnano": "^5.0.6",
     "postcss": "^8.3.5",
     "postcss-load-config": "^3.1.0",
-    "rollup-plugin-workbox": "^6.2.0",
     "svelte": "^3.37.0",
     "svelte-check": "^2.1.0",
     "svelte-preprocess": "^4.7.4",
     "tailwindcss": "^2.2.7",
     "tslib": "^2.2.0",
     "typescript": "^4.3.2",
-    "vite": "^2.4.4"
+    "vite": "^2.4.4",
+    "vite-plugin-pwa": "^0.11.2"
   }
 }
