--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
      * of JS in `.svelte` files.
      */
     "allowJs": true,
-    "checkJs": true
+    "checkJs": true,
+    "types": [
+      "vite-plugin-pwa/client"
+    ]
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
 }
