--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,7 @@
      * of JS in `.svelte` files.
      */
     "allowJs": true,
-    "checkJs": true,
-    "types": [
-      "vite-plugin-pwa/client"
-    ]
+    "checkJs": true
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
 }
