--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Searchmons",
   "short_name": "Searchmons",
-  "start_url": ".",
+  "start_url": "/searchmons/",
   "display": "standalone",
   "background_color": "#3d405b",
   "theme_color": "#f4f1de",
