--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,23 +1,23 @@
 {
-  "name": "Searchmons",
-  "short_name": "Searchmons",
-  "start_url": "/searchmons/",
-  "display": "standalone",
-  "background_color": "#3d405b",
-  "theme_color": "#f4f1de",
-  "description": "A searchable Pokedex app.",
-  "icons": [
-    {
-      "src": "icons/manifest-icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "icons/manifest-icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable any"
-    }
-  ]
+	"name": "Searchmons",
+	"short_name": "Searchmons",
+	"start_url": "/",
+	"display": "standalone",
+	"background_color": "#3d405b",
+	"theme_color": "#f4f1de",
+	"description": "A searchable Pokedex app.",
+	"icons": [
+		{
+			"src": "icons/manifest-icon-192.png",
+			"sizes": "192x192",
+			"type": "image/png",
+			"purpose": "maskable any"
+		},
+		{
+			"src": "icons/manifest-icon-512.png",
+			"sizes": "512x512",
+			"type": "image/png",
+			"purpose": "maskable any"
+		}
+	]
 }
