--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,4 @@
 {
-	"arrowParens": "avoid",
-	"singleQuote": true,
-	"trailingComma": "none",
-	"useTabs": true
+  "arrowParens": "avoid",
+  "singleQuote": true
 }
