--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "husky": "^7.0.4",
     "postcss": "^8.4.6",
     "postcss-load-config": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.1.8",
     "pretty-quick": "^3.1.3",
     "svelte": "^3.46.4",
     "svelte-check": "^2.4.3",
